# learn_openGL

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ElementBuffer.cpp  ElementBuffer.h  Main.cpp  Mesh.cpp  Mesh.h  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  Shader.cpp  Shader.h  Stb.cpp  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  build-n-run.sh  default.frag  default.vert  glad.c  light.frag  light.vert
C-Examples/: Arrays.c  fahr.c
CPP-Examples/: heap.cpp
Examples/: wordCounter.c
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
OpenGL/: .gitignore  ElementBuffer.cpp  ElementBuffer.h  Main.cpp  OpenGL.vcxproj  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  default.frag  default.vert
